--- a/lib/oc_transpo/routes.yml
+++ b/lib/oc_transpo/routes.yml
@@ -487,6 +487,8 @@
   :name: "\xC3\x89. S. Deslauriers to Fallowfield Station"
 - :number: "740"
   :name: O-Bus Bayview to O-Bus Greenboro
+- :number: "750"
+  :name: O-Train
 - :number: "824"
   :name: Beacon Hill to St. Laurent
 - :number: "825"
