Added O-Train headsigns.

--- a/lib/oc_transpo/headsigns.yml
+++ b/lib/oc_transpo/headsigns.yml
@@ -36240,7 +36240,7 @@
   - CG990
   - NB990
   - NA990
-  string: 
+  string: 750 BAYVIEW
   route_id: "750"
 - signature: 6c7fa1d5856de029685a876941600400
   id: 1697
@@ -36250,7 +36250,7 @@
   - CG995
   - RA990
   - RF990
-  string: 
+  string: 750 GREENBORO
   route_id: "750"
 - signature: feec448b12eb5df804ab3929a7cf9e94
   id: 1698
